--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "institutocaridadearacaju",
   "private": true,
-  "homepage": "https://luizjrlopes.github.io",
+  "homepage": "https://www.institutocaridadeuniversalaracaju.com/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "NODE_ENV=production vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "npm run build && npm run copy-cname && gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "copy-cname": "cp CNAME dist/"
   },
   "dependencies": {
